# bezier

./: .gitignore  Cargo.toml  rustfmt.toml
src/: bezier.rs  easing.rs  ffmpeg.rs  lib.rs  main.rs  point.rs  render.rs  transform.rs
